adicionei um parágrafo

--- a/site-exemplo/index.html
+++ b/site-exemplo/index.html
@@ -10,6 +10,7 @@
     <h1>Olá, Mundo!</h1>
     <hr>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nostrum fugit quidem explicabo eveniet, odit necessitatibus voluptates dicta vitae eius ducimus? Iure repellendus quis quaerat! Quas veritatis dignissimos ea eum ducimus.</p>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Non molestiae necessitatibus, consectetur quaerat facilis porro impedit vel unde, tempora pariatur voluptatibus mollitia explicabo minus laudantium. Officia placeat optio quidem numquam?</p>
     
 </body>
 </html>
